<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string-array name="days">
        <item>Pazartesi</item>
        <item>Salı</item>
        <item>Çarşamba</item>
        <item>Perşembe</item>
        <item>Cuma</item>
        <item>Cumartesi</item>
        <item>Pazar</item>
    </string-array>

    <string name="already_start">Zaten İlk Sorudasın</string>

    <string name="answer_proccess">Cevaplarınız işleniyor</string>

    <string name="app_name">CocukAsistan</string>

    <string name="are_u_sure_for_quit">Çıkmak istediğine emin misin ?</string>

    <plurals name="bottom_sheet_title">
        <item quantity="one">%d match found</item>
        <item quantity="other">%d matches found</item>
    </plurals>

    <string name="capture_photo">Capture Photo</string>

    <string name="categories">Kategoriler</string>

    <string name="cd_close_button">Back</string>
    <string name="cd_settings_button">Settings</string>

    <string name="congrat">Tebrikler</string>

    <string name="email_address">E-Mail</string>

    <string name="error_image">Error Image</string>
    <string name="error_text">Sanırım bir şeyler \n ters gitti..</string>
    <string name="error_username_password">Şifre veya e-posta adresi yanlış</string>

    <string name="etraf_kesfet">Etrafı Keşfet</string>

    <string name="exit_quiz">Quiz\'den Çık</string>

    <string name="fill_all_blank">Lütfen tüm alanları doldurunuz</string>

    <string name="gidak">Gıdak</string>

    <string name="greeting">Selam %1$s! \nNe Yapmak \n İstersin ?</string>

    <string name="kategoriler">Kategoriler</string>

    <string name="knowledge">Knowledge</string>

    <string name="login">Giriş Yap</string>
    <string name="login_success">Giriş Başarılı</string>

    <string name="minik_kasifg">Minik Kaşif</string>

    <string name="name_surname">Ad Soyad</string>

    <string name="no_quiz">Bu kategoride \n sınavımız \n kalmamış!</string>

    <string name="not_solved_all_test">Çözmedigin Sorular Var</string>

    <string name="password">Parola</string>

    <string name="please_solve">Lütfen bütün soruları çözmeyi dene</string>

    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>

    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>

    <string name="press_again_to_leave">Çıkmak için bir kere tıklayınız.</string>

    <string name="prompt_hold_camera_steady">Keep camera still for a moment</string>
    <string name="prompt_point_at_an_object">Point your camera at an object</string>
    <string name="prompt_searching">Searching…</string>

    <string name="quiz_coz">Quiz Çöz</string>

    <string name="register">Üye Ol</string>
    <string name="register_success">Kayıt Başarılı, Lütfen posta kutunuzu ziyaret edip üyeliğinizi onaylayınız.</string>

    <string name="shooted_image">Shooted Image</string>

    <string name="solve_quiz">Quiz Çöz</string>

    <string name="solved_all_test">Bütün testleri bitirdin</string>

    <string name="something_went_wrong">Bilinmeyen Bir Hata Oluştu</string>

    <string name="static_image_card_no_result_subtitle">Support text place holder</string>
    <string name="static_image_card_no_result_title">No result found</string>
    <string name="static_image_preview_card_subtitle">+%d more results</string>

    <string name="stay_here">Burada Kal</string>

    <string name="switch_camera">Switch Camera</string>

    <string name="tap_again">Çıkmak için tekrar basınız</string>

    <string name="welcome">Hoş \n Geldin!</string>

    <string name="went_wrong">Hata Oluştu</string>

    <string name="you_already_select">Zaten seçim yaptın.</string>
    <string name="notificatin_channel_name">Cocuk Asistan Bildirim Kanalı</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Ayarlar</string>
    <string name="notifications">Bildirimler</string>
    <string name="change_passowrd">Parola Değiştir</string>
    <string name="go_back">Geri Dön</string>
    <string name="log_out">Çıkış Yap</string>
    <string name="new_password">Yeni Parola</string>
    <string name="old_password">Eski Parola</string>
    <string name="save">Kaydet</string>
    <string name="passwords_does_not_match">Parolalar Uyuşmuyor</string>
    <string name="short_password">Parolanız Daha Uzun Olmalı</string>
    <string name="change_password_succes">Parola Değiştirme Başarılı</string>
    <string name="notification_setting">Bildirim Ayarları</string>
    <string name="short_pazartesi">Pzt</string>
    <string name="short_sali">Salı</string>
    <string name="short_carsamba">Çrş</string>
    <string name="shor_persembe">Prş</string>
    <string name="shor_cuma">Cuma</string>
    <string name="short_cumartesi">Cmt</string>
    <string name="short_pazar">Pzr</string>
    <string name="select_account">Bir Hesap Seçin</string>
    <string name="use_another_account">Başka Bir Hesap Kullan</string>
    <string name="will_be_add">Çok Yakında Eklenecektir.</string>
</resources>
