<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffc0ad"
    tools:context=".ui.user.login.LoginFragment">

    <ProgressBar
        android:id="@+id/prgBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/txtPassword"
        app:layout_constraintTop_toTopOf="@+id/btnLogin" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_rooster"
        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/include"
        layout="@layout/item_bubble_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <EditText
        android:id="@+id/txtEmail"
        style="@style/RegisterInput"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/input_border"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/txtPassword"
        app:layout_constraintEnd_toStartOf="@+id/errorEmail"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="John Doe" />

    <ImageView
        android:id="@+id/errorEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/error_image"
        android:padding="16dp"
        android:src="@drawable/ic_alert"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/txtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtEmail"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/txtPassword"
        style="@style/RegisterInput"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/input_border"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toStartOf="@+id/errorPassword"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="adsdadsda" />

    <ImageView
        android:id="@+id/errorPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/error_image"
        android:padding="16dp"
        android:src="@drawable/ic_alert"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/txtPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtPassword"
        tools:visibility="visible" />

    <com.iucbk_cocukasistan.custom_views.buttons.SwipeUpLoginButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="#e78fb3"
        android:elevation="12dp"
        android:fontFamily="@font/bubbleboddyneueregulartrial"
        android:gravity="center"
        android:lineSpacingExtra="10sp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/login"
        android:textColor="#f8f8f8"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/prgBar" />

</androidx.constraintlayout.widget.ConstraintLayout>