<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffc0ad"
    tools:context=".ui.user.register.RegisterFragment">

    <include
        android:id="@+id/chicken_bubble"
        layout="@layout/item_bubble_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/txtUserName"
        app:layout_constraintStart_toStartOf="@+id/txtUserName"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/prgBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/btnRegister"
        app:layout_constraintStart_toStartOf="@+id/txtUserPassword"
        app:layout_constraintTop_toTopOf="@+id/btnRegister" />


    <ImageView
        android:id="@+id/chicken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/error_image"
        android:src="@drawable/ic_chicken_base"
        app:layout_constraintBottom_toTopOf="@+id/txtUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtUserName"
        style="@style/RegisterInput"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/input_border"
        android:hint="@string/name_surname"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/txtUserEmail"
        app:layout_constraintEnd_toStartOf="@+id/errorName"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="John Doe" />

    <ImageView
        android:id="@+id/errorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/error_image"
        android:padding="16dp"
        android:src="@drawable/ic_alert"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/txtUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtUserName"
        tools:visibility="visible" />


    <EditText
        android:id="@+id/txtUserEmail"
        style="@style/RegisterInput"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/input_border"
        android:hint="@string/email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/txtUserPassword"
        app:layout_constraintEnd_toStartOf="@+id/errorEmail"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="sample@exmaple.com" />

    <ImageView
        android:id="@+id/errorEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/error_image"
        android:padding="16dp"
        android:src="@drawable/ic_alert"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/txtUserEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtUserEmail"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/txtUserPassword"
        style="@style/RegisterInput"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/input_border"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toStartOf="@+id/errorPassword"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/errorPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/error_image"
        android:padding="16dp"
        android:src="@drawable/ic_alert"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/txtUserPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtUserPassword"
        tools:visibility="visible" />

    <com.iucbk_cocukasistan.custom_views.buttons.SwipeUpLoginButton
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/register_button_color"
        android:elevation="12dp"
        android:fontFamily="@font/bubbleboddyneueregulartrial"
        android:gravity="center"
        android:lineSpacingExtra="10sp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/register"
        android:textColor="@color/general_button_bg"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/prgBar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/register_button_color"
        android:elevation="16dp"
        android:paddingStart="32dp"
        android:paddingTop="8dp"
        android:paddingEnd="24dp"
        android:paddingBottom="8dp"
        android:tint="@android:color/white"
        app:cornerRadius="32dp"
        app:elevation="16dp"
        app:icon="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/prgBar" />

</androidx.constraintlayout.widget.ConstraintLayout>